# VideoLog

./: .gitignore  DeveloperREADME.md  Dockerfile  NextSteps.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: config.py  db.py  main.py  models.py
app/api/: reference.py  video.py
app/services/: csv_writer.py  matcher.py  storage.py  video_processor.py  yolo_detector.py
docs/: ImplementationPlan.md  PLAN.md
