[project]
name = "persons-in-video"
version = "0.1.0"
description = "Video person recognition with liveness checks"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "opencv-python-headless>=4.9",
  "insightface>=0.7",
  "onnxruntime>=1.18",
  "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
